--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "iconfont:gen": "npm run exec iconfont:gen",
     "build": "cross-env NODE_ENV=production npm run exec build",
     "watch": "cross-env-shell NODE_ENV=development \"npm run clean && npm run vendor && npm run exec watch\"",
+    "dev": "npm run watch & node build/server.js",
     "lint:build": "eslint build/**/*.js --fix",
     "lint": "eslint assets/**/*.{js,vue} --fix"
   },
@@ -59,6 +60,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "chalk": "^2.4.2",
+    "compression": "^1.7.4",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
@@ -67,6 +69,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-vue": "^5.2.2",
+    "express": "^4.17.1",
     "fancy-log": "^1.3.3",
     "figures": "^3.0.0",
     "glob2base": "0.0.12",
@@ -86,6 +89,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-symbols": "^3.2.3",
     "gulp-useref": "^3.1.6",
+    "http-proxy-middleware": "^0.19.1",
     "husky": "^2.4.0",
     "is-valid-glob": "^1.0.0",
     "lazypipe": "^1.0.2",
@@ -99,6 +103,8 @@
     "postcss-nested": "^4.1.2",
     "postcss-preset-env": "^6.6.0",
     "postcss-sprites": "^4.2.1",
+    "postcss-will-change": "^3.0.0",
+    "pretty-time": "^1.1.0",
     "sort-keys": "^3.0.0",
     "terser": "^4.0.0",
     "terser-webpack-plugin": "^1.3.0",
@@ -109,9 +115,7 @@
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.33.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpackbar": "^3.2.0",
-    "pretty-time": "^1.1.0",
-    "postcss-will-change": "^3.0.0"
+    "webpackbar": "^3.2.0"
   },
   "dependencies": {
     "axios": "^0.18.1",
