--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "iconfont:gen": "npm run exec iconfont:gen",
     "build": "cross-env NODE_ENV=production npm run exec build",
     "watch": "cross-env-shell NODE_ENV=development \"npm run clean && npm run vendor && npm run exec watch\"",
-    "dev": "npm run watch & node build/server.js",
+    "dev": "cross-env-shell NODE_ENV=development \"npm run clean && npm run vendor && npm run exec server\"",
     "lint:build": "eslint build/**/*.js --fix",
     "lint": "eslint assets/**/*.{js,vue} --fix"
   },
@@ -42,18 +42,18 @@
   },
   "homepage": "https://github.com/evan2x/mpa-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
-    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
+    "@babel/plugin-proposal-function-sent": "^7.5.0",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
     "@babel/plugin-proposal-numeric-separator": "^7.2.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "babel-eslint": "^10.0.1",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-eslint": "^10.0.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
@@ -62,63 +62,63 @@
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
+    "css-loader": "^3.1.0",
     "cssnano": "^4.1.10",
-    "del": "^4.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-vue": "^5.2.2",
+    "del": "^5.0.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-vue": "^5.2.3",
     "express": "^4.17.1",
     "fancy-log": "^1.3.3",
     "figures": "^3.0.0",
     "glob2base": "0.0.12",
     "gulp": "^4.0.2",
-    "gulp-changed": "^3.2.0",
+    "gulp-changed": "^4.0.0",
     "gulp-cheerio": "^0.6.3",
     "gulp-consolidate": "^0.2.0",
-    "gulp-filter": "^5.1.0",
+    "gulp-filter": "^6.0.0",
     "gulp-iconfont": "^10.0.3",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.0.0",
     "gulp-inline-source": "^4.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-rev": "^9.0.0",
-    "gulp-rev-rewrite": "^1.1.4",
+    "gulp-rev-rewrite": "^2.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-symbols": "^3.2.3",
     "gulp-useref": "^3.1.6",
     "http-proxy-middleware": "^0.19.1",
-    "husky": "^2.4.0",
+    "husky": "^3.0.2",
     "is-valid-glob": "^1.0.0",
     "lazypipe": "^1.0.2",
-    "lint-staged": "^8.1.7",
-    "mini-css-extract-plugin": "^0.6.0",
+    "lint-staged": "^9.2.1",
+    "mini-css-extract-plugin": "^0.8.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
-    "postcss-preset-env": "^6.6.0",
+    "postcss-preset-env": "^6.7.0",
     "postcss-sprites": "^4.2.1",
     "postcss-will-change": "^3.0.0",
     "pretty-time": "^1.1.0",
     "sort-keys": "^3.0.0",
-    "terser": "^4.0.0",
-    "terser-webpack-plugin": "^1.3.0",
+    "terser": "^4.1.3",
+    "terser-webpack-plugin": "^1.4.1",
     "tildify": "^2.0.0",
     "vinyl": "^2.2.0",
     "vinyl-file": "^3.0.0",
-    "vue-loader": "^15.7.0",
+    "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.33.0",
-    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack": "^4.39.1",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpackbar": "^3.2.0"
   },
   "dependencies": {
-    "axios": "^0.18.1",
+    "axios": "^0.19.0",
     "core-js": "^3.1.4",
     "lodash": "^4.17.11",
     "regenerator-runtime": "^0.13.2",
