--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "mpa-boilerplate",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "description": "A boilerplate for multi-page application",
   "scripts": {
     "exec": "gulp --cwd=./ --gulpfile build/gulpfile.js",
@@ -42,18 +42,18 @@
   },
   "homepage": "https://github.com/evan2x/mpa-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
-    "@babel/plugin-proposal-function-sent": "^7.5.0",
-    "@babel/plugin-proposal-json-strings": "^7.2.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "babel-eslint": "^10.0.2",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.7.4",
+    "@babel/plugin-proposal-function-sent": "^7.7.4",
+    "@babel/plugin-proposal-json-strings": "^7.7.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.7.4",
+    "@babel/plugin-proposal-throw-expressions": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/plugin-syntax-import-meta": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "babel-eslint": "^10.0.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
@@ -61,26 +61,26 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.1.0",
+    "cross-env": "^5.2.1",
+    "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "del": "^5.0.0",
-    "eslint": "^6.1.0",
+    "del": "^5.1.0",
+    "eslint": "^6.7.1",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-vue": "^5.2.3",
     "express": "^4.17.1",
     "fancy-log": "^1.3.3",
-    "figures": "^3.0.0",
+    "figures": "^3.1.0",
     "glob2base": "0.0.12",
     "gulp": "^4.0.2",
-    "gulp-changed": "^4.0.0",
+    "gulp-changed": "^4.0.2",
     "gulp-cheerio": "^0.6.3",
     "gulp-consolidate": "^0.2.0",
     "gulp-filter": "^6.0.0",
     "gulp-iconfont": "^10.0.3",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^6.0.0",
+    "gulp-imagemin": "^6.2.0",
     "gulp-inline-source": "^4.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
@@ -90,36 +90,36 @@
     "gulp-svg-symbols": "^3.2.3",
     "gulp-useref": "^3.1.6",
     "http-proxy-middleware": "^0.19.1",
-    "husky": "^3.0.2",
+    "husky": "^3.1.0",
     "is-valid-glob": "^1.0.0",
     "lazypipe": "^1.0.2",
-    "lint-staged": "^9.2.1",
+    "lint-staged": "^9.4.3",
     "mini-css-extract-plugin": "^0.8.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.1.2",
+    "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-sprites": "^4.2.1",
     "postcss-will-change": "^3.0.0",
     "pretty-time": "^1.1.0",
     "sort-keys": "^3.0.0",
-    "terser": "^4.1.3",
+    "terser": "^4.4.0",
     "terser-webpack-plugin": "^1.4.1",
     "tildify": "^2.0.0",
     "vinyl": "^2.2.0",
     "vinyl-file": "^3.0.0",
-    "vue-loader": "^15.7.1",
+    "vue-loader": "^15.7.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.39.1",
-    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpackbar": "^3.2.0"
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "core-js": "^3.1.4",
+    "core-js": "^3.4.2",
     "lodash": "^4.17.11",
     "regenerator-runtime": "^0.13.2",
     "vue": "^2.6.10"
