--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "express": "^4.17.1",
     "fancy-log": "^1.3.3",
     "figures": "^3.1.0",
+    "file-loader": "^5.0.2",
     "glob2base": "0.0.12",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.2",
