--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "build": "cross-env NODE_ENV=production npm run exec build",
     "watch": "cross-env-shell NODE_ENV=development \"npm run clean && npm run vendor && npm run exec watch\"",
     "dev": "cross-env-shell NODE_ENV=development \"npm run clean && npm run vendor && npm run exec server\"",
-    "lint:build": "eslint build/**/*.js --fix",
-    "lint": "eslint assets/**/*.{js,vue} --fix"
+    "lint-build": "eslint --fix --ext .js build/",
+    "lint": "eslint --fix --ext .js,.vue assets/"
   },
   "engines": {
-    "node": ">=8.9.0"
+    "node": ">=10.13.0"
   },
   "lint-staged": {
     "assets/**/*.{js,vue}": [
@@ -42,39 +42,40 @@
   },
   "homepage": "https://github.com/evan2x/mpa-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-export-namespace-from": "^7.7.4",
-    "@babel/plugin-proposal-function-sent": "^7.7.4",
-    "@babel/plugin-proposal-json-strings": "^7.7.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
-    "@babel/plugin-proposal-numeric-separator": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
-    "@babel/plugin-proposal-throw-expressions": "^7.7.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-syntax-import-meta": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "babel-eslint": "^10.0.3",
+    "@babel/core": "^7.9.0",
+    "@babel/parser": "7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
+    "@babel/plugin-proposal-function-sent": "^7.8.3",
+    "@babel/plugin-proposal-json-strings": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "babel-eslint": "^10.1.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "cross-env": "^5.2.1",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.5.2",
     "cssnano": "^4.1.10",
     "del": "^5.1.0",
-    "eslint": "^6.7.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-vue": "^6.2.2",
     "express": "^4.17.1",
     "fancy-log": "^1.3.3",
-    "figures": "^3.1.0",
-    "file-loader": "^5.0.2",
+    "figures": "^3.2.0",
+    "file-loader": "^5.1.0",
     "glob2base": "0.0.12",
     "gulp": "^4.0.2",
     "gulp-changed": "^4.0.2",
@@ -97,9 +98,9 @@
     "is-valid-glob": "^1.0.0",
     "lazypipe": "^1.0.2",
     "lint-staged": "^9.5.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
+    "mini-css-extract-plugin": "^0.8.2",
+    "minimist": "^1.2.5",
+    "mkdirp": "^0.5.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
@@ -109,22 +110,22 @@
     "postcss-will-change": "^3.0.0",
     "pretty-time": "^1.1.0",
     "sort-keys": "^3.0.0",
-    "terser": "^4.4.0",
-    "terser-webpack-plugin": "^1.4.1",
+    "terser": "^4.6.11",
+    "terser-webpack-plugin": "^1.4.3",
     "tildify": "^2.0.0",
     "vinyl": "^2.2.0",
     "vinyl-file": "^3.0.0",
-    "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.6.0",
+    "vue-loader": "^15.9.1",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpackbar": "^3.2.0"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^3.4.5",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.5",
     "lodash": "^4.17.11",
-    "regenerator-runtime": "^0.13.2",
-    "vue": "^2.6.10"
+    "regenerator-runtime": "^0.13.5",
+    "vue": "^2.6.11"
   }
 }
